--- a/implementation/react_frontend/src/client/style/Header.scss
+++ b/implementation/react_frontend/src/client/style/Header.scss
@@ -1,8 +1,8 @@
 @import "main.scss";
 
 .Header {
-  font-family: 'PingFang HK Light';
-  font-style: oblique;
+  font-family: 'Roboto';
+  font-weight: lighter;
   font-size: 44px;
   margin: 0;
   padding: 0;
