--- a/implementation/react_frontend/src/client/style/ContentContainer.scss
+++ b/implementation/react_frontend/src/client/style/ContentContainer.scss
@@ -1,8 +1,17 @@
 @import "main.scss";
 
-#content {
-  width: 50%;
+#content_container {
+  width: 60%;
   height: 100%;
-  margin-right: 25%;
-  margin-left: 25%;
+  margin-right: 20%;
+  margin-left: 20%;
+  margin-top: 20px;
+}
+
+.content {
+  border-radius: 5px;
+  background-color: grey;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 20px;
 }
