--- a/implementation/react_frontend/src/client/style/Main.scss
+++ b/implementation/react_frontend/src/client/style/Main.scss
@@ -5,7 +5,7 @@ $pink: #FF9196;
 $white: #FFFFFF;
 
 * {
-  font-family: 'Roboto';
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
