--- a/implementation/react_frontend/src/client/style/Header.scss
+++ b/implementation/react_frontend/src/client/style/Header.scss
@@ -25,6 +25,12 @@
   color: white;
 }
 
+#sub_content_bar .sub_content:hover {
+  transition-duration: 0.02s;
+  transform: scale(1.02);
+  cursor: pointer;
+}
+
 a {
   text-decoration: none;
 }
