--- a/implementation/react_frontend/src/client/style/ContentContainer.scss
+++ b/implementation/react_frontend/src/client/style/ContentContainer.scss
@@ -10,8 +10,9 @@
 .content {
   list-style-position: inside;
   border-radius: 5px;
-  background-color: #E0E0E0;
+  background-color: #EEEEEE;
   width: 100%;
   margin-bottom: 10px;
   padding: 20px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
