started to work on create entry overlay

--- a/implementation/react_frontend/src/client/style/BlogController.scss
+++ b/implementation/react_frontend/src/client/style/BlogController.scss
@@ -5,3 +5,21 @@
   height: 100%;
   width: 100%;
 }
+
+#create_button {
+  border: none;
+  outline: none;
+  background-color: tomato;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 5px;
+  color: white;
+}
+#create_button:hover{
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
