--- a/implementation/react_frontend/src/client/style/BlogController.scss
+++ b/implementation/react_frontend/src/client/style/BlogController.scss
@@ -20,6 +20,32 @@
   border-radius: 5px;
   color: white;
 }
+
 #create_button:hover{
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  cursor: pointer;
+}
+
+.overlay_content {
+  position: fixed;
+  left: 20%;
+  right: 20%;
+  top: 10%;
+  bottom: 20%;
+  display: inherit;
+  text-align: center;
+  background-color: white;
+  border-radius: 20px;
+  cursor: default;
 }
