creating entries working

--- a/implementation/react_frontend/src/client/style/ContentContainer.scss
+++ b/implementation/react_frontend/src/client/style/ContentContainer.scss
@@ -27,10 +27,11 @@ li {
 
 .post_date {
   margin-bottom: 10px;
-  border-bottom: 1px dashed;
+  border-bottom: 1px groove;
+  font-size: 17px;
 }
 
 .post_header {
   font-weight: bold;
-  font-size: 22px;
+  font-size: 18px;
 }
