I cannot get that piece of shit slider working

--- a/implementation/react_frontend/src/client/style/BlogController.scss
+++ b/implementation/react_frontend/src/client/style/BlogController.scss
@@ -9,7 +9,7 @@
 #create_button {
   border: none;
   outline: none;
-  background-color: tomato;
+  background-color: #FF4081;
   position: fixed;
   bottom: 0px;
   right: 0px;
