--- a/implementation/react_frontend/src/client/style/Header.scss
+++ b/implementation/react_frontend/src/client/style/Header.scss
@@ -11,7 +11,7 @@
 
 #header_content {
   display: inline-block;
-  margin-top: 40px;
+  margin-top: 32px;
   color: white;
 }
 
@@ -58,7 +58,7 @@ a:hover {
 hr {
   height: .25rem;
   margin: 0;
-  background: tomato;
+  background: #FF4081;
   border: none;
   transition: .3s ease-in-out;
 }
