--- a/implementation/react_frontend/src/client/style/ContentContainer.scss
+++ b/implementation/react_frontend/src/client/style/ContentContainer.scss
@@ -35,3 +35,12 @@ li {
   font-weight: bold;
   font-size: 18px;
 }
+
+img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+pre {
+  overflow-y: scroll;
+}
