--- a/implementation/react_frontend/src/client/style/Main.scss
+++ b/implementation/react_frontend/src/client/style/Main.scss
@@ -5,8 +5,26 @@ $pink: #FF9196;
 $white: #FFFFFF;
 
 * {
-  font-family: 'Muli', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#react_main_container {
+  display:block;
+  overflow:auto;
+}
+
+.BlogController {
+  font-family: 'Muli', sans-serif;
+  height: 100%;
+  display: block;
+  overflow: auto;
+}
+
+.AboutController {
+  font-family: 'Muli', sans-serif;
+  height: 100%;
+  display: block;
+  overflow: auto;
 }
