progress in documentation and footer

--- a/implementation/react_frontend/src/client/style/BlogController.scss
+++ b/implementation/react_frontend/src/client/style/BlogController.scss
@@ -9,7 +9,7 @@
 .material_button {
   border: none;
   outline: none;
-  background-color: #FF4081;
+  background-color: #009688;
   padding: 5px;
   font-size: 15px;
   border-radius: 5px;
