--- a/implementation/react_frontend/src/client/style/Main.scss
+++ b/implementation/react_frontend/src/client/style/Main.scss
@@ -15,7 +15,7 @@ $white: #FFFFFF;
   overflow:auto;
 }
 
-.BlogController {
+.BlogController, .AdminController {
   font-family: 'Muli', sans-serif;
   height: 100%;
   display: block;
