progress in documentation

--- a/implementation/react_frontend/src/client/style/BlogController.scss
+++ b/implementation/react_frontend/src/client/style/BlogController.scss
@@ -19,6 +19,7 @@
 #create_entry_button {
   background-color: #9c27b0;
   border: 2px solid #9c27b0;
+  outline: none;
   font-size: 15px;
   color: white;
   border-radius: 5px;
@@ -31,7 +32,7 @@
   margin-bottom: 20px;
 }
 
-.material_button:hover{
+.material_button:hover, #create_entry_button:hover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
