--- a/implementation/react_frontend/src/client/style/AdminController.scss
+++ b/implementation/react_frontend/src/client/style/AdminController.scss
@@ -31,6 +31,9 @@ input[type='submit'] {
   font-size: 15px;
 }
 
+input[type='submit']:hover {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
 .field {
   padding: 5px;
   font-family: "Inconsolata", sans-serif;
