progress in documentation

--- a/implementation/react_frontend/src/client/style/Footer.scss
+++ b/implementation/react_frontend/src/client/style/Footer.scss
@@ -4,7 +4,7 @@
   left: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #009688;
+  background-color: #ff4081;
   color: white;
   text-align: center;
 }
