--- a/implementation/react_frontend/src/client/style/AdminController.scss
+++ b/implementation/react_frontend/src/client/style/AdminController.scss
@@ -18,6 +18,7 @@ input[type='text'], input[type='password'] {
   outline: none;
   border-radius: 5px;
   box-shadow: none;
+  font-family: "Muli", sans-serif;
 }
 
 input[type='submit'] {
@@ -34,9 +35,9 @@ input[type='submit'] {
 input[type='submit']:hover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
 .field {
   padding: 5px;
-  font-family: "Inconsolata", sans-serif;
 }
 
 textarea {
